--- a/saisyu/index2.html
+++ b/saisyu/index2.html
@@ -59,7 +59,7 @@
 <div class="container-fluid">
 
   <div class="table-responsive">
-    <h2>Section title</h2>
+    <h2>Pro setting</h2>
     <table class="table table-striped table-sm">
       <thead>
       <tr>
@@ -110,42 +110,196 @@
         <td>v1</td>
         <td>name</td>
         <td>800</td>
-        <td>0.3r</td>
+        <td>0.3</td>
         <td>g pro</td>
       </tr>
       <tr>
         <td>v1</td>
         <td>name</td>
         <td>800</td>
-        <td>0.3r</td>
+        <td>0.3</td>
         <td>g pro</td>
       </tr>
       <tr>
         <td>v1</td>
         <td>name</td>
         <td>800</td>
-        <td>0.3r</td>
+        <td>0.3</td>
         <td>g pro</td>
       </tr>
       <tr>
         <td>v1</td>
         <td>name</td>
         <td>800</td>
-        <td>0.3r</td>
+        <td>0.3</td>
         <td>g pro</td>
       </tr>
       <tr>
         <td>v1</td>
         <td>name</td>
         <td>800</td>
-        <td>0.3r</td>
+        <td>0.3</td>
         <td>g pro</td>
       </tr>
       <tr>
         <td>v1</td>
         <td>name</td>
         <td>800</td>
-        <td>0.3r</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
         <td>g pro</td>
       </tr>
       </tbody>
